deploy/k8s/templates/bandobuddy/service.portfolio-bandobuddy.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-bandobuddy
spec:
  selector:
    app: portfolio-bandobuddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8642
  type: ClusterIP
