deploy/k8s/templates/bandobuddy/ingress.portfolio-bandobuddy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bandobuddy-ingress
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/router.priority: "10"
spec:
  ingressClassName: traefik
  rules:
    - host: bandobuddy.aidenharwood.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-bandobuddy
                port:
                  number: 80
